--- a/requirements.txt
+++ b/requirements.txt
@@ -1,64 +1,33 @@
-altgraph==0.10.1
-argparse==1.2.1
-awscli==1.10.35
-bdist-mpkg==0.4.4
-bonjour-py==0.3
-botocore==1.4.25
+Django==1.9.5
+PyJWT==1.4.0
+click==5.1
 colorama==0.3.3
-docutils==0.12
-jmespath==0.9.0
-macholib==1.5
-matplotlib==1.1.1
-modulegraph==0.10.1
-numpy==1.6.2
-ordereddict==1.1
-py2app==0.7.1
-pyOpenSSL==0.13.1
-pyasn1==0.1.9
-pyobjc-core==2.3.2a0
-pyobjc-framework-AddressBook==2.3.2a0
-pyobjc-framework-AppleScriptKit==2.3.2a0
-pyobjc-framework-AppleScriptObjC==2.3.2a0
-pyobjc-framework-Automator==2.3.2a0
-pyobjc-framework-CFNetwork==2.3.2a0
-pyobjc-framework-Cocoa==2.3.2a0
-pyobjc-framework-Collaboration==2.3.2a0
-pyobjc-framework-CoreData==2.3.2a0
-pyobjc-framework-CoreLocation==2.3.2a0
-pyobjc-framework-CoreText==2.3.2a0
-pyobjc-framework-DictionaryServices==2.3.2a0
-pyobjc-framework-ExceptionHandling==2.3.2a0
-pyobjc-framework-FSEvents==2.3.2a0
-pyobjc-framework-InputMethodKit==2.3.2a0
-pyobjc-framework-InstallerPlugins==2.3.2a0
-pyobjc-framework-InstantMessage==2.3.2a0
-pyobjc-framework-InterfaceBuilderKit==2.3.2a0
-pyobjc-framework-LatentSemanticMapping==2.3.2a0
-pyobjc-framework-LaunchServices==2.3.2a0
-pyobjc-framework-Message==2.3.2a0
-pyobjc-framework-OpenDirectory==2.3.2a0
-pyobjc-framework-PreferencePanes==2.3.2a0
-pyobjc-framework-PubSub==2.3.2a0
-pyobjc-framework-QTKit==2.3.2a0
-pyobjc-framework-Quartz==2.3.2a0
-pyobjc-framework-ScreenSaver==2.3.2a0
-pyobjc-framework-ScriptingBridge==2.3.2a0
-pyobjc-framework-SearchKit==2.3.2a0
-pyobjc-framework-ServiceManagement==2.3.2a0
-pyobjc-framework-SyncServices==2.3.2a0
-pyobjc-framework-SystemConfiguration==2.3.2a0
-pyobjc-framework-WebKit==2.3.2a0
-pyobjc-framework-XgridFoundation==2.3.2a0
-python-dateutil==1.5
-pytz==2012d
-rsa==3.4.2
-s3transfer==0.0.1
-scipy==0.11.0
-stevedore==0.15
-virtualenv==1.11.6
-virtualenv-clone==0.2.5
-virtualenvwrapper==4.3.1
-wget==2.2
+django-appconf==1.0.1
+django-autocomplete-light==2.3.2
+django-bootstrap-form==3.2
+django-localflavor==1.3
+django-mptt==0.8.0
+django-mptt-admin==0.3.1
+django-nested-inline==0.3.5
+django-taggit==0.18.0
+django-taggit-labels==0.4.1
+django-todo==1.5
+django-user-accounts==1.3.1
+jsonfield==1.0.3
+metron==1.3.7
+oauthlib==1.1.2
+pathlib==1.0.1
+pinax-calendars==0.6
+pinax-cli==1.0.0
+pinax-eventlog==1.1.1
+pinax-notifications==3.0.1
+pinax-theme-bootstrap==7.8.0
+pinax-webanalytics==2.0.1
+psycopg2==2.6.1
+python-openid==2.2.5
+python-social-auth==0.2.13
+pytz==2015.7
+requests==2.7.0
+requests-oauthlib==0.6.1
+six==1.10.0
 wsgiref==0.1.2
-xattr==0.6.4
-zope.interface==4.1.1
