--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ pinax-eventlog==1.1.1
 pinax-notifications==3.0.1
 pinax-theme-bootstrap==7.8.0
 pinax-webanalytics==2.0.1
+psycopg2==2.6.1
 python-openid==2.2.5
 python-social-auth==0.2.13
 pytz==2015.7
